# Stargazer2

./: LICENSE  README.md
Stargazer2/: .env.dev  README.md  pyproject.toml
Stargazer2/stargazer2/plugins/helloworld/: __init__.py
Stargazer2/stargazer2/plugins/ocgbot/: __init__.py  ocg.py
